# Estudo_Dirigido_05

./: CMakeLists.txt  README.md
docs/: logger.txt  plotDataCommands.gp  runtimeSortedArray.txt  runtimeUnsortedArray.txt  vetor1.txt  vetor2.txt
src/: main  main.cpp  strategyPattern.h
test/: test  testTime.cpp
